2017-10-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-copy-buffer): Make the copied buffer the next of the
	current buffer by default (like Firefox does); use the new argument
	LAST to make it the last in order of buffers.
	(w3m-view-this-url-1, w3m-goto-url, w3m-goto-url-new-session): Set LAST.

	* w3m-util.el (w3m-generate-new-buffer): Make the new buffer the next
	of the current buffer if the new argument NEXT is set.

	* w3m-util.el (w3m-about-cookie): Use input instead of textarea.

2017-10-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	Make `w3m-retrieve' do onload redirection.

	* w3m.el (w3m-retrieve-and-render): Move onload redirection stuff to
	(w3m-w3m-onload-redirection): New function.
	(w3m-w3m-retrieve-1): Use it.
	(w3m-decode-encoded-contents): Use zlib-decompress-region for gzip.

2017-09-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-cookie.el (w3m-about-cookie): Work for old Emacsen.
	* aclocal.m4 (AC_PATH_EMACS): Work for Emacs 27 and greater.

2017-09-25  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-confirm-leaving-secure-page):
	Move forward ([emacs-w3m:12807]).

2017-09-25  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-goto-url-new-session): Fix the problem ([emacs-w3m:12584])
	that a w3m buffer is mis-named "*server*-nnnnnn";
	Use (if (not CONDITION) FOO BAR) instead of (if CONDITION BAR FOO) style
	in order to improve the visibility of the code.

2017-09-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-retrieve-and-render): Workaround: don't do redirection if
	the onload function name doesn't end with ".submit" ([emacs-w3m:12795]).

	* w3m.el (w3m-content-type-alist): Run mailcap-parse-mailcaps and
	mailcap-parse-mimetypes before setting it.
	(w3m-create-page): Run w3m-external-view in tty for images, etc.
	(w3m-external-view-file): Make deleting of temp file delayed.
	[emacs-w3m:12793]

2017-09-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-verbose, w3m-message-silent, w3m-message): Doc fix.
